# lab12

./: CMakeLists.txt  main.cpp
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
_build/_3rdParty/Hunter/: install-root-dir
_build/_3rdParty/Hunter/config-id/: config.cmake
_build/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
